--- a/practice/src/main/resources/templates/board/boardList.html
+++ b/practice/src/main/resources/templates/board/boardList.html
@@ -33,7 +33,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="board : ${boardDtoList}">
+    <tr th:each="board : ${boards}">
         <td th:text="${board.bno}"></td>
         <td th:text="${board.title}"></td>
         <td th:text="${board.content}"></td>
